2021-07-09  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: performance data is no more shown by critical and warning message when --no-perf is specified

2021-06-22  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: removes the file name from file(1) output

2021-06-18  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (check_attr): stop the SSL Labs checks after an error

2021-06-16  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (check_attr): show the progress in % by SSL labs
	* check_ssl_cert (check_attr): removing unnecessary port probing with nmap

2021-05-31  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (check_cert_end_date): Display since how many days the certificate was valid

2021-05-28  Igor Mironov  <mcs6502-sek@yahoo.com.au>

	* check_ssl_cert: compatibility fixes for LibreSSL 2.8.3 on macOS Catalina

2021-05-21  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: added the --debug-file option
	* check_ssl_cert(check_ocsp): append .crt to the debug certificates
	* check_ssl_cert: sanity checks for file write operations

2021-05-07  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (check_ocsp): Do not store the debugging copy of the certificate in the $TMPDIR

2021-05-06  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): Fixed an error in the parameter validation

2021-05-05  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (check_attr): do not wait if SSL Labs is giving an error

2021-04-30  Matteo Corti  <matteo@corti.li>

	* Makefile: avoid putting extended attribute files in the archives

2021-04-29  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (check_attr): Do not remove parenthesis from URI

2021-04-29  Claus-Theodor Riegg (https://github.com/ctriegg-mak)

	* check_ssl_cert: match underscores in subdomains when matching name to wildcard certs

2021-04-28  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (check_attr): adds and option to remove performance data

2021-04-23  Matteo Corti  <matteo@corti.li>
