@@ -1,3 +1,4 @@
+2021-08-13 Version   2.3.8: Bug fix: fixed the parsing of the --cn command line option
 2021-07-09 Version   2.3.7: Bug fix: performance data is no more shown by critical and warning message when --no-perf is specified
 2021-06-23 Version   2.3.6: Bug fix: follows symbolic links
 2021-06-22 Version   2.3.5: Bug fix: correct parsing of file(1) ou
